Created Edit- & FocusItem Fragments
- Created Edit- & FocusItem Fragments
- Added Menu items to toggle ' edit' mode
- Created functions in ItemAdapter to call new fragments
- Added animations to certain fragments
- Changed ItemObservable.price to not include valuta
- Added functionality to restore last used fragment on app pause / move to background
- Made some general UI changes

- TODO: Pass image in ItemObservable in other way than using ' Drawable' -> causes crash because this is not a Serializable
- TODO: Implement method to save changes to back-end / DB

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -52,7 +52,7 @@
         android:paddingStart="60dp"
         android:paddingEnd="0dp"
         android:stateListAnimator="@null"
-        android:text="@string/btnScan"
+        android:text="@string/btn_scan"
         android:textAllCaps="false"
         android:visibility="visible"
         app:cornerRadius="0dp"
