--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:overScrollMode="never"
-            android:background="@drawable/layout_border_transparent"
+            android:background="@drawable/rounded_border_transparent_background"
             android:divider="@android:color/darker_gray"
             android:dividerHeight="0.5dp"
             android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
@@ -50,10 +50,11 @@
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
-            android:background="@drawable/layout_border_transparent"
+            android:background="@drawable/rounded_border_transparent_background"
+            android:foreground="?android:attr/selectableItemBackground"
             android:insetTop="0dp"
             android:insetBottom="0dp"
-            android:text="Clear order"
+            android:text="@string/btn_clear_order"
             android:textColor="@color/teal4"
             tools:ignore="TouchTargetSizeCheck" />
 
@@ -65,11 +66,12 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
-            android:background="@drawable/layout_border_transparent"
+            android:background="@drawable/rounded_border_transparent_background"
+            android:foreground="?android:attr/selectableItemBackground"
             android:backgroundTint="@color/white"
             android:insetTop="0dp"
             android:insetBottom="0dp"
-            android:text="Send order"
+            android:text="@string/btn_send_order"
             android:textColor="@color/teal4"
             tools:ignore="TouchTargetSizeCheck" />
 
@@ -93,7 +95,7 @@
             android:paddingStart="60dp"
             android:paddingEnd="0dp"
             android:stateListAnimator="@null"
-            android:text="@string/btnCheckout"
+            android:text="@string/btn_checkout"
             android:textAllCaps="false"
             android:visibility="visible"
             app:cornerRadius="0dp"
