--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -10,11 +10,15 @@
         <item name="colorSecondaryVariant">@color/teal5</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-    <style name="ShapeAppearanceOverlay.MyApp.Button.Rounded" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="button_rounded" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
+    </style>
+    <style name="rounded_square">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">7dp</item>
     </style>
 </resources>
